Bug 170181 - PPT -> PPTX Placehodler imported as OLE object
Summary: PPT -> PPTX Placehodler imported as OLE object
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-31 09:22 UTC by Karthik
Modified: 2026-01-30 08:42 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
PPT File (62.00 KB, application/vnd.ms-powerpoint)
2025-12-31 09:27 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-31 09:22:58 UTC
Description:
Open the attached PPT file, the placeholder in the slide is imported as OLE object.

Because of this when we save the file as PPTX, PowerPoint fails to open the file

This happens if the placeholder is for (table, chart, images, etc)

Steps to Reproduce:
1. Open the attached PPT file
2. The only shape is the slide is an OLE object instead of a placeholder

Actual Results:
 

Expected Results:
 


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.8.3.2 (X86_64)
Build ID: 8ca8d55c161d602844f5428fa4b58097424e324e
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Calc: threaded
Comment 1 Karthik 2025-12-31 09:27:58 UTC
Created attachment 204874 [details]
PPT File
Comment 2 Commit Notification 2026-01-27 13:25:12 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/59382f50efb869982ac22a2e1e42adc21357f797

tdf#170181: PPT placeholder imported as OLE object

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-30 08:42:58 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/9c4945c0cbdc960eb0b4a9f2638207e0cba37be3

tdf#170181: PPT placeholder imported as OLE object

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.