tdf#170181: PPT placeholder imported as OLE object

Placeholder for (table, chart, image) is imported as OLE object
instead of placeholder

Change-Id: I62d5ac3e48d51944629f0eb82de390db10a59c2c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196352
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>
(cherry picked from commit 6d44b4a044b6571b7ef878650c3e328193ea8fba)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198176
Tested-by: Jenkins
(cherry picked from commit 59382f50efb869982ac22a2e1e42adc21357f797)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198270
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>